--- a/tasks/taskpush-web.yaml
+++ b/tasks/taskpush-web.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: build-docker-image-from-git-source
+  name: build-web-docker-image
 spec:
   inputs:
     resources:
@@ -11,17 +11,12 @@ spec:
       - name: pathToDockerFileWeb
         description: The path to the dockerfile to build
         default: /workspace/source/Dockerfile
-      - name: pathToDockerFileApp
-        description: The path to the dockerfile to build
-        default: /workspace/source/Dockerfile
       - name: pathToContext
         description: The build context used by Kaniko
         default: /workspace/source
   outputs:
     resources:
       - name: builtImageWeb
-        type: image
-      - name: builtImageApp
         type: image
   steps:
     - name: build-web-and-push
@@ -31,12 +26,4 @@ spec:
       args:
         - --dockerfile=${inputs.params.pathToDockerFileWeb}
         - --destination=${outputs.resources.builtImageWeb.url}
-        - --context=${inputs.params.pathToContext}
-    - name: build-app-and-push
-      image: gcr.io/kaniko-project/executor
-      command:
-        - /kaniko/executor
-      args:
-        - --dockerfile=${inputs.params.pathToDockerFileApp}
-        - --destination=${outputs.resources.builtImageApp.url}
         - --context=${inputs.params.pathToContext}
