--- a/tasks/taskpush-web.yaml
+++ b/tasks/taskpush-web.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: build-web-docker-image
+  name: build-web-image
 spec:
   inputs:
     resources:
@@ -19,7 +19,7 @@ spec:
       - name: builtImageWeb
         type: image
   steps:
-    - name: build-web-and-push
+    - name: build-and-push
       image: gcr.io/kaniko-project/executor
       command:
         - /kaniko/executor
