--- a/tasks/build-app.yaml
+++ b/tasks/build-app.yaml
@@ -7,13 +7,16 @@ spec:
     resources:
       - name: source
         type: git
+
     params:
       - name: pathToDockerFileApp
         description: The path to the dockerfile to build
-        default: /workspace/source/Dockerfile
+        default: DockerfileApp
+
       - name: pathToContext
         description: The build context used by Kaniko
-        default: /workspace/source
+        default: /workspace/source/
+
   outputs:
     resources:
       - name: builtImageApp
